wstęp teoretyczny do alfa-sssi i funkcji kopuł

--- a/aplha_sssi_process.ipynb
+++ b/aplha_sssi_process.ipynb
@@ -11,6 +11,29 @@
    "id": "51ae3bcf02b4198a"
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## Wstęp\n",
+    "\n",
+    "### Procesy Alpha-sssi\n",
+    "Procesy Alpha-sssi (Alpha Self-Similar Stable wit Stationary Increments) jest to grupa procesów o rozkładach stabilnych, samopodobnych ze stacjonarnymi przyrostami. Rozkłady alfa-stabilne to klasta rozkładów prawdopodobieństwa, które generalizują rozkład Gaussa. Charakteryzują się zdolnością do pomieszczenia większych wartości z większym prawdopodobieństwem niż rozkłady Gaussa. Sprawia to, że są one przydatne do modelowania procesów z ekstremalnymi wartościami lub wartościami odstającymi.\n",
+    "\n",
+    "Parameter alfa odnosi się do poziomu stabilności, który mieści się w zakrenie (0, 2]. Parameter ten kontroluje zachowanie ogona rozkładu. Alfa o wartości 2 odpowiada rozkładowi Gaussa, podczas gdy niższe wartości wskazują na \"grubsze\" ogony (proces osiąga wartości bardziej oddalone od y=0).\n",
+    "\n",
+    "Samopodobieństwo to cecha, w której proces lub wzór pozostaje niezmieniony przy pewnym skalowaniu czasu lub przestrzeni. W kontekście procesów alfa-samopodobnych oznacza to, że jeśli przeskaluje się proces w czasie, jego właściwości statystyczne pozostaną takie same. Ta cecha jest istotna przy modelowaniu zjawisk o charakterze fraktalnym lyb wykazujących zachowanie skalarne.\n",
+    "\n",
+    "Stacjonarne przyrosty procesu oznaczają, że właściwości statystyczne przyrostów są takie same niezaleźnie od chwili czasowej.\n",
+    "\n",
+    "### Funckcje Kopuł\n",
+    "\n",
+    "W statystyce wielowymiarowej, kopuła to funkcja łącząca jednowymiarowe rozkłady brzegowe w celu zbudowania rozkładu wielowymiarowego. W zasadzie umożliwia modelowanie zależności między zmiennymi losowymi."
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "ac936c543afc9be5"
+  },
+  {
    "cell_type": "code",
    "outputs": [],
    "source": [
@@ -144,9 +167,7 @@
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "Copula functions"
-   ],
+   "source": [],
    "metadata": {
     "collapsed": false
    },
